# gandi-api-livedns

./: LICENSE  Makefile  README.md  setup.cfg  tests.py
src/gandi_api_livedns/: __init__.py  const.py  gandi.py
