[metadata]
name = gandi-api-livedns
version = 0.0.1
author = Flexy2dd
author_email = flexy2dd@blackdev.com
description = Simple connector to Gandi.net live dns API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flexy2dd/gandi-api-livedns
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp >= 3.6.2
    async_timeout >= 3.0.1

[options.packages.find]
where = src