[metadata]
name = gandi-api-livedns
version = 0.2.0
author = Flexy2dd
author_email = flexy2dd@blackdev.com
description = Gandi.net live DNS client Api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/flexy2dd/gandi-api-livedns
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Software Development :: Build Tools

keywords = gandi.net, api, dns

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests >= ^2.25.0

[options.packages.find]
where = src